WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289921
[site-isolation] ASSERT in greaterThanOrEqualSameProcess from WebPageProxy::didCommitLayerTree
https://bugs.webkit.org/show_bug.cgi?id=289921
Summary
[site-isolation] ASSERT in greaterThanOrEqualSameProcess from WebPageProxy::d...
Matt Woodrow
Reported
2025-03-17 15:47:39 PDT
This code should only run for main-frame transactions.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-17 15:47:52 PDT
<
rdar://problem/147260946
>
Matt Woodrow
Comment 2
2025-03-17 15:50:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42585
EWS
Comment 3
2025-03-19 13:45:42 PDT
Committed
292378@main
(23b89de6908e): <
https://commits.webkit.org/292378@main
> Reviewed commits have been landed. Closing PR #42585 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug