[site-isolation] ASSERT in greaterThanOrEqualSameProcess from WebPageProxy::didCommitLayerTree. https://bugs.webkit.org/show_bug.cgi?id=289921 <rdar://147260946>

Reviewed by Alex Christensen.

This code should only run for main-frame transactions.

* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::didCommitLayerTree):

Canonical link: https://commits.webkit.org/292378@main